Fixes project nav on mobile

--- a/src/styles/components/feature.scss
+++ b/src/styles/components/feature.scss
@@ -47,4 +47,9 @@
       margin-top: auto;
     }
   }
+
+  .feature-container {
+    padding: 0;
+    top: 0;
+  }
 }
