--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -174,6 +174,19 @@ nav {
     }
 }
 
+.icon.arrow {
+    &.fourth {
+        path {
+            fill: var(--fourth);
+        }
+    }
+    &.tertiary {
+        path {
+            fill: var(--tertiary);
+        }
+    }
+}
+
 .icon-menu {
     .cls-1{fill:none;}
     .cls-2{clip-path:url(#icon-menu-clip-path);}
@@ -238,9 +251,11 @@ nav {
     }
 
     .control-feature-container {
-        flex-direction: column;
+        position: absolute;
+        bottom: 42%;
         right: 0;
-        bottom: 50%;
+        width: auto;
+        flex-direction: column-reverse;
     }
 
     .control-message {
